Fixes issue with image styles for highlighted and hides subheading on mobile

--- a/docroot/sites/all/themes/open_frame/scss/base/_mixins.scss
+++ b/docroot/sites/all/themes/open_frame/scss/base/_mixins.scss
@@ -345,9 +345,25 @@
   visibility: hidden;
 }
 
+@mixin visible($mode: block) {
+  display: $mode !important;
+  visibility: visible;
+}
+
 @mixin hide($breakpoint) {
   @include breakpoint($breakpoint) {
     @include hidden;
+  }
+}
+
+@mixin show($breakpoint: false, $mode: block) {
+  @if $breakpoint {
+    @include breakpoint($breakpoint) {
+      @include visible($mode);
+    }
+  }
+  @else {
+    @include visible($mode);
   }
 }
 
